<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_salle"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_salle" />
        <item
            android:id="@+id/nav_machine"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_machine" />
        <item
            android:id="@+id/nav_list_salle"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_list_salle" />
        <item
            android:id="@+id/nav_list_machine"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_list_machine" />
        <item
            android:id="@+id/nav_list_machines_par_salle"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_list_machines_par_salle" />
    </group>
</menu>